# sprat-cli

./: CMakeLists.txt  COMPACT_PERFORMANCE.md  README.md  spratprofiles.cfg
.github/workflows/: ci.yml
build_test/tests/: layout_test
build_test/transforms/: csv.transform  godot.jsonnet  json.jsonnet  phaser-array.jsonnet  phaser-hash.jsonnet  plist.jsonnet  unity.anim.jsonnet  unity.meta.jsonnet  xml.jsonnet
include/spratgen/: config.hpp  export.hpp  generator.hpp  palette.hpp  pose_interp.hpp  pose_model.hpp  renderer.hpp  silhouette.hpp  skeleton.hpp
man/: sprat-cli.1
spratforge_export/: CMakeLists.txt
spratforge_export/include/spratgen/: generator.hpp  palette.hpp  renderer.hpp
spratforge_export/spratgen_core/: CMakeLists.txt
spratforge_export/src/spratgen/: export.cpp  generator.cpp  palette.cpp  pose_interp.cpp  renderer.cpp
spratforge_export/tools/spratforge/: spratforge_main.cpp
src/commands/: spratconvert_command.cpp  spratlayout_command.cpp  spratpack_command.cpp  spratunpack_command.cpp
src/core/: cli_parse.cpp  fnv1a.h  (+2 more)
tests/: CMakeLists.txt  convert_test.sh  edge_cases_test.sh  layout_test.cpp  profile_resolution_test.sh  recursive_dir_test.sh  sort_behavior_test.sh  spratforge_test.cpp  spratlayout_exclude_test.sh  unity_test.sh
transforms/: aseprite.jsonnet  aseprite.transform  css.jsonnet  css.transform  csv.jsonnet  csv.transform  godot.jsonnet  godot.transform  json.jsonnet  json.transform  libgdx.jsonnet  libgdx.transform  phaser-anims.jsonnet  phaser-array.jsonnet  phaser-array.transform  phaser-hash.jsonnet  phaser-hash.transform  plist.jsonnet  plist.transform  unity.json.jsonnet  unity.json.transform  unity.meta.jsonnet  unity.meta.transform  xml.jsonnet  xml.transform
(+10 files in other folders)
